# Cattery-backend

./: Cargo.toml  data.db
migrations/: 20240212151709_create_users.down.sql  20240212151709_create_users.up.sql  20240218131018_create_shops.down.sql  20240218131018_create_shops.up.sql
src/: api.rs  db.rs  main.rs
src/api/: jwt.rs  user.rs
