[package]
name = "Cattery-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5.0", features = ["trace", "request-id", "util" ] }
tower = "0.4.13"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "sqlite", "time" ] }
dotenvy  = "0.15"
time = { version = "0.3.31", features = [ "serde-human-readable" ] }
anyhow = "1.0"
jsonwebtoken = "9"